--- a/jenkinsfile
+++ b/jenkinsfile
@@ -27,12 +27,10 @@ pipeline {
             steps {
                 script {
                     sh '''
-                        # Set JAVA_HOME for this pipeline
                         export JAVA_HOME=/usr/lib/jvm/java-21-openjdk
                         export PATH=$JAVA_HOME/bin:$PATH
                         echo "JAVA_HOME set to: $JAVA_HOME"
                         
-                        # Verify tools
                         echo "=== Verifying Tools ==="
                         java -version
                         mvn --version || echo "Maven not working - but continuing"
@@ -48,13 +46,11 @@ pipeline {
         stage("Verify Environment") {
             steps {
                 script {
-                    // Verify NodeJS is installed
                     def nodeVersion = sh(script: 'node --version', returnStdout: true).trim()
                     def npmVersion = sh(script: 'npm --version', returnStdout: true).trim()
                     echo "NodeJS version: ${nodeVersion}"
                     echo "NPM version: ${npmVersion}"
                     
-                    // Verify we're in the right directory
                     sh 'pwd && ls -la'
                 }
             }
@@ -89,35 +85,25 @@ pipeline {
                 script {
                     withSonarQubeEnv(credentialsId: 'Sonarqube') { 
                         sh '''
-                            # Set JAVA_HOME
                             export JAVA_HOME=/usr/lib/jvm/java-21-openjdk
                             export PATH=$JAVA_HOME/bin:$PATH
                             
-                            echo "📥 Setting up SonarScanner..."
+                            echo "Setting up SonarScanner..."
                             if ! command -v sonar-scanner &> /dev/null; then
                                 echo "Installing SonarScanner..."
                                 wget -q https://binaries.sonarsource.com/Distribution/sonar-scanner-cli/sonar-scanner-cli-4.8.0.2856-linux.zip
                                 unzip -q sonar-scanner-cli-4.8.0.2856-linux.zip
                                 export PATH=$PWD/sonar-scanner-4.8.0.2856-linux/bin:$PATH
-                                echo "✅ SonarScanner installed successfully"
+                                echo "SonarScanner installed successfully"
                             else
-                                echo "✅ SonarScanner is already installed"
+                                echo "SonarScanner is already installed"
                             fi
                             
-                            # Verify SonarScanner
                             echo "SonarScanner version:"
                             sonar-scanner --version
                             
-                            echo "🚀 Starting SonarQube analysis..."
-                            sonar-scanner \\
-                                -Dsonar.projectKey=register-app \\
-                                -Dsonar.sources=. \\
-                                -Dsonar.host.url=$SONAR_HOST_URL \\
-                                -Dsonar.login=$SONAR_AUTH_TOKEN \\
-                                -Dsonar.coverage.exclusions=**/node_modules/**,**/tests/** \\
-                                -Dsonar.exclusions=**/node_modules/**,**/.*/** \\
-                                -Dsonar.projectName="Register App" \\
-                                -Dsonar.projectVersion=1.0
+                            echo "Starting SonarQube analysis..."
+                            sonar-scanner -Dsonar.projectKey=register-app -Dsonar.sources=. -Dsonar.host.url=$SONAR_HOST_URL -Dsonar.login=$SONAR_AUTH_TOKEN -Dsonar.coverage.exclusions=**/node_modules/**,**/tests/** -Dsonar.exclusions=**/node_modules/**,**/.*/** -Dsonar.projectName="Register App" -Dsonar.projectVersion=1.0
                         '''
                     }
                 }	
@@ -143,7 +129,7 @@ pipeline {
                         sh '''
                             echo "Testing Docker Hub credentials..."
                             podman login -u $DOCKER_USER -p $DOCKER_PASS docker.io
-                            echo "✅ Docker Hub login successful!"
+                            echo "Docker Hub login successful!"
                         '''
                     }
                 }
@@ -154,7 +140,7 @@ pipeline {
             steps {
                 script {
                     if (fileExists('Dockerfile')) {
-                        echo "🚀 Building and pushing container image..."
+                        echo "Building and pushing container image..."
                         
                         withCredentials([usernamePassword(
                             credentialsId: 'dockerhub',
@@ -162,34 +148,28 @@ pipeline {
                             passwordVariable: 'DOCKER_PASS'
                         )]) {
                             sh """
-                                # Clean up any existing auth issues
                                 rm -f /root/.docker/config.json
                                 rm -f /run/user/0/containers/auth.json
                                 
-                                # Login to Docker Hub
                                 podman login -u '$DOCKER_USER' -p '$DOCKER_PASS' docker.io
                                 
-                                # Build the image
                                 echo "Building image: docker.io/${IMAGE_NAME}:${IMAGE_TAG}"
                                 podman build -t docker.io/${IMAGE_NAME}:${IMAGE_TAG} .
                                 
-                                # Push the version tag first
                                 echo "Pushing version tag: ${IMAGE_TAG}"
                                 podman push docker.io/${IMAGE_NAME}:${IMAGE_TAG}
                                 
-                                # Fresh login for the second push to avoid token issues
                                 podman login -u '$DOCKER_USER' -p '$DOCKER_PASS' docker.io
                                 
-                                # Tag and push as latest
                                 podman tag docker.io/${IMAGE_NAME}:${IMAGE_TAG} docker.io/${IMAGE_NAME}:latest
                                 echo "Pushing latest tag"
                                 podman push docker.io/${IMAGE_NAME}:latest
                                 
-                                echo "✅ All container images pushed successfully to Docker Hub"
+                                echo "All container images pushed successfully to Docker Hub"
                             """
                         }
                     } else {
-                        echo "⚠️ No Dockerfile found - skipping container build stage"
+                        echo "No Dockerfile found - skipping container build stage"
                         sh 'pwd && ls -la'
                     }
                 }
@@ -209,7 +189,7 @@ pipeline {
                             podman login -u $DOCKER_USER -p $DOCKER_PASS docker.io
                             podman pull docker.io/${IMAGE_NAME}:${IMAGE_TAG}
                             podman pull docker.io/${IMAGE_NAME}:latest
-                            echo "✅ Images verified and can be pulled successfully"
+                            echo "Images verified and can be pulled successfully"
                         '''
                     }
                 }
@@ -220,19 +200,13 @@ pipeline {
             steps {
                 script {
                     if (fileExists('Dockerfile')) {
-                        echo "🔍 Running Trivy security scan..."
+                        echo "Running Trivy security scan..."
                         sh """
-                            podman run --security-opt label=disable \\
-                                aquasec/trivy image docker.io/${IMAGE_NAME}:latest \\
-                                --no-progress \\
-                                --scanners vuln \\
-                                --exit-code 0 \\
-                                --severity HIGH,CRITICAL \\
-                                --format table
+                            podman run --security-opt label=disable aquasec/trivy image docker.io/${IMAGE_NAME}:latest --no-progress --scanners vuln --exit-code 0 --severity HIGH,CRITICAL --format table
                         """
-                        echo "✅ Trivy security scan completed"
+                        echo "Trivy security scan completed"
                     } else {
-                        echo "⚠️ No container image available - skipping Trivy scan"
+                        echo "No container image available - skipping Trivy scan"
                     }
                 }
             }
@@ -242,18 +216,15 @@ pipeline {
             steps {
                 script {
                     if (fileExists('Dockerfile')) {
-                        echo "🧹 Cleaning up container artifacts..."
+                        echo "Cleaning up container artifacts..."
                         sh """
-                            # Remove local images to free up space
                             podman rmi docker.io/${IMAGE_NAME}:${IMAGE_TAG} || echo "Version image not found"
                             podman rmi docker.io/${IMAGE_NAME}:latest || echo "Latest image not found"
-                            
-                            # Clean up containers and cache
                             podman system prune -f || echo "No pruning needed"
                         """
-                        echo "✅ Container artifacts cleaned up"
+                        echo "Container artifacts cleaned up"
                     } else {
-                        echo "⚠️ No container artifacts to clean up"
+                        echo "No container artifacts to clean up"
                     }
                 }
             }
@@ -262,18 +233,15 @@ pipeline {
         stage("Start Application") {
             steps {
                 script {
-                    echo "🚀 Starting application..."
-                    // Stop any existing instances first
+                    echo "Starting application..."
                     sh 'forever stopall || echo "No previous instances running"'
                     sh 'pkill -f "node.*app.js" || echo "No node processes to kill"'
                     
-                    // Start server on port 3001
                     sh 'PORT=3001 forever start app.js'
-                    sh 'sleep 10'  # Increased sleep time for app to start
+                    sh 'sleep 10'
                     
-                    // Check if server is running
                     sh '''
-                        echo "=== Checking application status ==="
+                        echo "Checking application status"
                         ps aux | grep node | grep -v grep || echo "No node processes found"
                         netstat -tulpn | grep :3001 || echo "Port 3001 not listening"
                         forever list || echo "Forever not available"
@@ -285,11 +253,10 @@ pipeline {
         stage("Test Application") {
             steps {
                 script {
-                    echo "🧪 Testing application..."
-                    // Test if the application is responding
+                    echo "Testing application..."
                     sh '''
                         echo "Testing application endpoint..."
-                        curl -f http://localhost:3001/ && echo "✅ Application is responding" || echo "❌ Application not responding on port 3001"
+                        curl -f http://localhost:3001/ && echo "Application is responding" || echo "Application not responding on port 3001"
                         
                         echo "Testing application content..."
                         curl -s http://localhost:3001/ | head -n 5 || echo "Cannot fetch application content"
@@ -302,21 +269,19 @@ pipeline {
     post {
         always { 
             script {
-                echo "🛑 Stopping application..."
+                echo "Stopping application..."
                 sh 'forever stopall || echo "No forever processes to stop"'
                 sh 'pkill -f "node.*app.js" || echo "No node processes to kill"'
-                
-                echo "🧹 Final cleanup..."
                 sh 'podman system prune -f || echo "No podman cleanup needed"'
             }
             echo "Build process completed - cleaning workspace"
             cleanWs() 
         }
         success { 
-            echo "🎉 ✅ Build completed successfully!" 
+            echo "Build completed successfully!" 
             script {
                 sh '''
-                    echo "=== Build Summary ==="
+                    echo "Build Summary"
                     echo "Docker Image: docker.io/${IMAGE_NAME}:${IMAGE_TAG}"
                     echo "Docker Image: docker.io/${IMAGE_NAME}:latest"
                     echo "Build Number: ${BUILD_NUMBER}"
@@ -324,10 +289,10 @@ pipeline {
             }
         }
         failure { 
-            echo "💥 ❌ Build failed!" 
+            echo "Build failed!" 
             script {
                 sh '''
-                    echo "=== Troubleshooting Info ==="
+                    echo "Troubleshooting Info"
                     echo "Check Docker Hub: https://hub.docker.com/r/fazilkunju/register-app-pipeline"
                     echo "Check Jenkins logs for detailed error information"
                 '''
